# SurfPro

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
conf/: config.yaml
conf/data/: all.yaml  awst.yaml  cmc.yaml  gamma.yaml  multi.yaml  pc20.yaml
conf/host/: local.yaml  queue.yaml
conf/model/: attfp-32d.yaml  attfp-64d.yaml  attfp-96d.yaml
conf/task/: all.yaml  awst.yaml  cmc.yaml  gamma.yaml  multi.yaml  pc20.yaml
data/: surfpro_bibliography.bib  surfpro_literature.csv  surfpro_test.csv  surfpro_train.csv
scripts/: evaluate_model.py  fill_table.py  flag_unlabelled_stereogenic_centres.py  inspect_structures.py  make_baselines.py  plot_distributions.py  plot_model_size.py  plot_predictions.py  plot_test_errors.py  sk_baseline.py  test_split.py  train_model.py
src/: dataloader.py  featurizer.py  model.py
src/surfpro/: converter.py  dataloader.py  featurizer.py  model.py
