[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SurfPro"
authors = [
  {name = "Stefan Hoedl", email = "stefan.hoedl@ru.nl"},
  {name = "Pim Dankloff", email = "pim.dankloff@ru.nl"},
  {name = "Alexander Korotkevich", email = "alexander.korotkevich@ru.nl"},
  {name = "Wilhelm TS Huck", email = "wilhelm.huck@ru.nl"},
  {name = "William E. Robinson", email = "william.robinson@ru.nl"}
]
description = "SurfPro: A curated database and predictive model of experimental properties of surfactants"
version = "2.0"
readme = "README.md"
license-files = ["LICENSE.md"]
keywords = ["surfactants", "CMC", "surface tension", "property", "experimental", "graph neural network"]
requires-python = "==3.12.4"
dependencies = [
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "wandb==0.17.8",
  "dvc==3.55.0",
  "scikit-learn==1.5.1",
  "numpy==2.1.0",
  "pandas==2.2.2",
  "rdkit==2024.3.5",
  "scipy==1.14.1",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "pytorch-lightning==2.4.0",
  "torch_geometric==2.5.3",
  "torch==2.4.0",
  "pyopenssl==24.1.0",
]

[project.urls]
Github = "https://github.com/BigChemistry-RobotLab/SurfPro"
Zenodo = "https://zenodo.org/records/14931937"
